src/snapshots/kk__tests__compiler__typecheck__progressive_unification_3.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f
  : \number => null
  = \(x): number => 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/progressive_unification_3.kk:3:11
  │
3 │   = \(x): number => 2
  │           ^^^^^^ Wrong type annotation
  │
  = The expected type annotation is:

      null
